--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRC_FILES
         ~/projects/clox/src/debug.c
         ~/projects/clox/src/value.c
         ~/projects/clox/src/memory.c
+        ~/projects/clox/src/vm.c
 
 )
 
